--- a/css/css.css
+++ b/css/css.css
@@ -211,6 +211,12 @@ header .search-bar-container label:hover{
 .login-form .view{
     top: 12%;
 }
+.login-form form .message{
+    font-size: 1.5rem;
+    position: relative;
+    padding: .2rem;
+    color: #FF3535;
+}
 /*#menu-bar{
     color: #fff;
     border: .1rem solid #fff;
@@ -336,6 +342,32 @@ header .search-bar-container label:hover{
     padding: 1rem 0;
     font-size: 2rem;
     color: #666;
+}
+.notification {
+ position: absolute;
+ top:12%;
+ z-index: 0;
+ left:75%;
+ min-height: 20rem;
+ min-width: 20rem;
+ max-width: auto;
+ max-height: auto;
+ background:rgba(0, 0, 0, 0.2);
+ color: #fff;
+ 
+}
+.notification .box {
+   font-size: 2rem;
+    padding: 1.5rem;
+}
+.notification .box  .box-content{
+    background: #333;
+    padding: 1rem;
+}
+
+.notification.activate{
+    z-index: 100;
+    left: 75%;
 }
 section{
     padding: 2rem 10%;
