--- a/css/css.css
+++ b/css/css.css
@@ -3,48 +3,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Boogaloo&family=Comforter&family=Monoton&family=Pacifico&family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Boogaloo&family=Comforter&family=Monoton&family=Pacifico&family=Satisfy&family=Smooch&display=swap');
 
-:root{
-    --pink:#fc1e7b;
-    --color:#fff;
-    --back:rgba(255, 165, 0,.2);
-    --foot:rgba(0, 0, 0, 0.7);
-    --head:#333;    
+:root {
+    --pink: #fc1e7b;
+    --color: #fff;
+    --back: rgba(255, 165, 0, .2);
+    --foot: rgba(0, 0, 0, 0.7);
+    --head: #333;
 }
-body{
+
+body {
     background: var(--color);
 }
-*{
+
+* {
     font-family: 'Nunito', sans-serif;
-    margin: 0;padding: 0;
-    box-sizing: border-box;text-transform: capitalize;
-    outline: none;border: none;
-    text-decoration: none;transition: all .5s linear;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-transform: capitalize;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    transition: all .5s linear;
     cursor: pointer;
 }
-*::selection{
+
+*::selection {
     background: var(--pink);
     color: #fff;
 }
-html::-webkit-scrollbar{
-    width: 1rem ;
+
+html::-webkit-scrollbar {
+    width: 1rem;
 }
-html::-webkit-scrollbar-track{
+
+html::-webkit-scrollbar-track {
     background: #fff;
 }
-html::-webkit-scrollbar-thumb{
-    background:var(--pink);
+
+html::-webkit-scrollbar-thumb {
+    background: var(--pink);
     padding: 5rem;
     border-radius: .7rem;
 }
-html{
+
+html {
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-padding-top: 6rem;
     scroll-behavior: smooth;
 }
-header{
+
+header {
     position: fixed;
-    top: 0;left: 0;right: 0;
+    top: 0;
+    left: 0;
+    right: 0;
     background: #333;
     z-index: 1000;
     display: flex;
@@ -52,35 +66,42 @@ header{
     justify-content: space-between;
     padding: 2rem 9%;
 }
-header .logo{
+
+header .logo {
     font-family: 'Boogaloo', cursive;
     font-size: 2rem;
     font-weight: bolder;
     color: #fff;
     text-transform: uppercase;
 }
-header .logo span{
-    font-family:'Alfa Slab One', cursive;
+
+header .logo span {
+    font-family: 'Alfa Slab One', cursive;
     color: var(--pink);
     text-transform: uppercase;
 }
-header .navbar a{
+
+header .navbar a {
     color: #fff;
     font-size: 2rem;
     margin: .6rem;
 }
-header .navbar a:hover{
+
+header .navbar a:hover {
     color: var(--pink);
 }
-header .icons i{
+
+header .icons i {
     font-size: 2.5rem;
     color: #fff;
     cursor: pointer;
     margin-right: 2rem;
 }
-header .icons i:hover{
+
+header .icons i:hover {
     color: var(--pink);
 }
+
 /*header .search-bar-container{
     position: absolute;
     top: 100%;left: 0; right: 0;
@@ -123,118 +144,143 @@ header .search-bar-container label{
 header .search-bar-container label:hover{
     color: var(--pink);
 }*/
-.btn{
+.btn {
     display: inline-block;
     margin-top: 1rem;
-    background:var(--pink);
-    color:#fff;
-    padding:.8rem 3rem;
-    border:.2rem solid var(--pink);
+    background: var(--pink);
+    color: #fff;
+    padding: .8rem 3rem;
+    border: .2rem solid var(--pink);
     cursor: pointer;
     font-size: 1.7rem;
-  }
-  .btn:hover{
-    background:rgba(255, 255,255,.2);
-    color:var(--pink);
-  }
-  .login-form{
+}
+
+.btn:hover {
+    background: rgba(255, 255, 255, .2);
+    color: var(--pink);
+}
+
+.login-form {
     position: fixed;
-    top: -120%;left: 0;
+    top: 0%;
+    left: 0;
     z-index: 10000;
     min-height: 100vh;
     width: 100%;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.6);
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  .login-form.active{
-      top: 0;
-  }
-  .login-form form{
-      margin: 2rem;
-      padding: 1.5rem 1.5rem;
-      border-radius: .5rem;
-      background: #fff;
-      width: 50rem;
-  }
-  .login-form form h3{
-      font-size: 3rem;
-      color: #444;
-      text-transform: uppercase;
-      text-align: center;
-      padding: 1rem 0;
 }
-.login-form form .box{
+
+.login-form.active {
+    top: 0;
+}
+
+.login-form form {
+    margin: 2rem;
+    padding: 1.5rem 1.5rem;
+    border-radius: .5rem;
+    background: transparent;
+    width: 50rem;
+}
+
+.login-form form h3 {
+    font-size: 3rem;
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 1rem 0;
+}
+
+.login-form form .box {
     width: 100%;
     padding: 1rem;
     font-size: 1.7rem;
     color: #333;
     margin: .6rem 0;
-    border: .1rem solid rgba(0, 0, 0, .3);
-    text-transform:capitalize;
+    border: .1rem solid #eee;
+    text-transform: capitalize;
 
 }
 
-.login-form form .input span{
+.login-form form .input input {
+    color: #eee;
+    background: transparent;
+}
+
+.login-form form .input span {
     font-size: 1.5rem;
-    position:relative;
+    position: relative;
     bottom: 40px;
     left: 16px;
+    color: #eee;
 }
 
-.login-form form .box:focus{
+.login-form form .box:focus {
     border-color: var(--pink);
 }
-.login-form form .box:focus ~ span
-{
+
+.login-form form .box:focus~span,
+.login-form form .box:valid~span {
     color: #fc1e7b;
     padding: 0 10px;
     font-size: 1.5rem;
     font-weight: bold;
-    background: white;
+    background: #666;
     bottom: 60px;
 }
-.login-form form .btn{
+
+.login-form form .btn {
     display: block;
     width: 100%;
     position: relative;
     bottom: 10px;
 
 }
-.login-form form p{
+
+.login-form form p {
     padding: .2rem 0;
     font-size: 1.5rem;
-    color: #666;
+    color: #fff;
+    font-weight: bolder;
 }
-.login-form form p a{
+
+.login-form form p a {
     color: var(--pink);
 }
-.login-form form p a:hover{
-   color: #333;
-   text-decoration: underline;
+
+.login-form form p a:hover {
+    color: #FFF;
+    text-decoration: underline;
 }
-.login-form #form-close{
+
+.login-form #form-close {
     position: absolute;
-    top: 2rem;left: 3rem;
+    top: 2rem;
+    left: 3rem;
     font-size: 5rem;
     color: #fff;
     cursor: pointer;
 }
-.login-form .register{
-   position: absolute;
-   top: -120%;
-   left: 32.4%;
+
+.login-form .register {
+    position: absolute;
+    top: 0%;
+    left: 32.4%;
 }
-.login-form .view{
+
+.login-form .view {
     top: 4%;
 }
-.login-form form .message{
+
+.login-form form .message {
     font-size: 1.5rem;
     position: relative;
     padding: .2rem;
     color: #FF3535;
 }
+
 /*#menu-bar{
     color: #fff;
     border: .1rem solid #fff;
@@ -244,7 +290,7 @@ header .search-bar-container label:hover{
     cursor: pointer;
     display: none;
 }*/
-.home{
+.home {
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -253,22 +299,26 @@ header .search-bar-container label:hover{
     position: relative;
     z-index: 0;
 }
-.home .content{
+
+.home .content {
     text-align: center;
 }
-.home .content h3{
+
+.home .content h3 {
     font-size: 4.5rem;
-    color:#eee;
-    text-transform:capitalize;
+    color: #eee;
+    text-transform: capitalize;
     text-shadow: 0 .3rem .5rem rgba(0, 0, 0, .1);
-    
+
 }
-.home .content p{
+
+.home .content p {
     font-size: 2.5rem;
     color: #fff;
-    padding:.5rem 0;
+    padding: .5rem 0;
 }
-.home .video-container video{
+
+.home .video-container video {
     position: absolute;
     top: 0;
     left: 0;
@@ -276,49 +326,58 @@ header .search-bar-container label:hover{
     height: 100%;
     width: 100%;
     object-fit: cover;
+    border-bottom: 1px solid transparent;
 }
 
-.home .controls{
+.home .controls {
     padding: 1rem;
     border-radius: 5rem;
     background: rgba(0, 0, 0, 0.7);
     position: relative;
     top: 10rem;
 }
-.home .controls .vid-btn{
+
+.home .controls .vid-btn {
     height: 2rem;
     width: 2rem;
     display: inline-block;
     border-radius: 50%;
     background: #fff;
     cursor: pointer;
-    margin:0 .5rem;
+    margin: 0 .5rem;
 }
-.home .controls .vid-btn.active{
+
+.home .controls .vid-btn.active {
     background: var(--pink);
 }
-.book .row{
+
+.book .row {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
     align-items: center;
 }
-.book .row .image{
+
+.book .row .image {
     flex: 1 1 40rem;
 }
-.book .row .image img{
+
+.book .row .image img {
     width: 100%;
 }
-.book .row form{
+
+.book .row form {
     flex: 1 1 40rem;
-    padding: 2rem ;
-    box-shadow:  0 1rem 2rem rgba(0, 0, 0, .1);
+    padding: 2rem;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
     border-radius: .5rem;
 }
-.book .row form .inputbox{
+
+.book .row form .inputbox {
     padding: .1rem 0;
 }
-.book .row form .inputbox input{
+
+.book .row form .inputbox input {
     width: 100%;
     padding: 1rem;
     border: .1rem solid rgba(0, 0, 0, .1);
@@ -326,28 +385,33 @@ header .search-bar-container label:hover{
     color: #333;
     text-transform: none;
 }
-.book .row form .inputbox textarea{
+
+.book .row form .inputbox textarea {
     width: 100%;
     padding: 1rem;
     border: .1rem solid rgba(0, 0, 0, .1);
     font-size: 1.7rem;
     color: #333;
     text-transform: none;
-    
+
 }
-.book .row form .flex{
-    display:flex;
+
+.book .row form .flex {
+    display: flex;
 }
-.book .row form .flex .inputbox{
+
+.book .row form .flex .inputbox {
     padding: 2rem;
 }
-.book .row form select{
+
+.book .row form select {
     padding: .5rem 0;
     border: .2rem solid rgba(0, 0, 0, .1);
     font-size: 2rem;
-    
+
 }
-.book .row form select option{
+
+.book .row form select option {
     width: 100%;
     padding: 1rem 1rem;
     border: none;
@@ -356,178 +420,262 @@ header .search-bar-container label:hover{
     text-transform: capitalize;
 }
 
-.book .row form .inputbox h3{
+.book .row form .inputbox h3 {
     padding: 1rem 0;
     font-size: 2rem;
     color: #666;
 }
+
 .notification {
     position: fixed;
     top: -120%;
-    z-index: 1000;
-    left:75%;
+    z-index: 600;
+    left: 70%;
     min-height: 20rem;
     min-width: 20rem;
     max-width: auto;
     max-height: auto;
-    background:rgba(0, 0, 0, 0.2);
+    background: #fc1e7b;
     color: #fff;
- 
+    transition: 2s;
+    border-radius: 5%;
 }
+
 .notification .box {
-   font-size: 2rem;
+    font-size: 2rem;
     padding: 1.5rem;
+
 }
-.notification .box  .box-content{
-    background: #444;
+
+.notification .box .box-content {
+    background: #eee;
     padding: 1rem;
+    color: #333;
+    width: 30rem;
+    border-radius: 3%;
+}
+
+.notification .box th.box-content {
+    background-color: rgba(0, 0, 0, .4);
     color: #eee;
 }
 
-.notification.activate{
+.notification.activate {
     top: 10%;
+    transition: 2s;
 }
-section{
+
+.dropdown {
+    position: fixed;
+    top: -120%;
+    z-index: 600;
+    left: 75%;
+    min-height: 4rem;
+    min-width: 15rem;
+    max-width: auto;
+    max-height: auto;
+    background: #fff;
+    transition: 2s;
+
+}
+
+.dropdown.active {
+    top: 9.6%;
+    transition: 1.5s;
+}
+
+.dropdown .box {
+    font-size: 2rem;
+    padding: 1rem;
+
+}
+
+.dropdown .box:nth-child(1) {
+
+    border-bottom: .3rem solid #ddd;
+
+}
+
+.dropdown .box a {
+    padding: 1rem;
+    color: #333;
+
+}
+
+.dropdown a:hover {
+    color: #fc1e7b;
+
+}
+
+section {
     padding: 2rem 10%;
 }
-.heading{
+
+.heading {
     text-align: center;
     padding: 2.5rem 0;
     font-family: 'Alfa Slab One', cursive;
     font-size: 3.5rem;
     top: 20px;
 }
-.heading span{
+
+.heading span {
     font-size: 3.5rem;
     color: var(--pink);
     font-family: 'Alfa Slab One', cursive;
 }
 
-.package .box-container{
-    
-    display: flex;
+.package .box-container {
+
     flex-wrap: wrap;
     gap: 2rem;
-    
+
 }
-.package .box-container .box{
+
+
+.package .slide.close {
+    display: none;
+}
+
+.package .box-container .box {
+    max-width: 40rem;
     flex: 1 1 30rem;
     border-radius: .5rem;
     overflow: hidden;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
+    height: 50rem;
 }
-.package .box-container .box img{
+
+.package .box-container .box img {
     height: 30rem;
     width: 100%;
-    object-fit:cover;
+    object-fit: cover;
 }
-.package .box-container .box .content{
+
+.package .box-container .box .content {
     padding: 2rem;
 }
-.package .box-container .box .content h3{
+
+.package .box-container .box .content h3 {
     font-size: 2rem;
     color: var(--head);
 }
 
-.package .box-container .box .content p{
+.package .box-container .box .content p {
     font-size: 1.7rem;
     color: #666;
     padding: 1rem 0;
     position: relative;
-    left:1rem;
+    left: 1rem;
 }
- 
-.package .box-container .box .content .price{
+
+.package .box-container .box .content .price {
     font-size: 2rem;
     color: var(--head);
     padding-top: 1rem;
 }
-.package .box-container .box .content .price span{
+
+.package .box-container .box .content .price span {
     color: #666;
     font-size: 1.5rem;
     text-decoration: line-through;
 }
-.package .catagory{
+
+.package .catagory {
     text-align: center;
 }
-.package .catagory span{
+
+.package .catagory span {
     padding: 2px 3%;
     border-radius: 1rem;
 }
+
 .package span:hover {
-    background-color:#eee;
+    background-color: #eee;
     color: #fc1e7b;
-  }
-  
-  .package .offer{
-   position: relative;
-   top: -503px; 
-   left: .2rem;
-   width: 10px;
-   padding:.5rem 14%;
-   background: #fc1e7b;
-   color: #eee;
-   border-end-end-radius: 50%;
-   border-start-start-radius: 50%;
 }
-.package .offer b{
+
+.package .offer {
+    position: relative;
+    top: -503px;
+    left: .2rem;
+    width: 10px;
+    padding: .5rem 14%;
+    background: #fc1e7b;
+    color: #eee;
+    border-end-end-radius: 50%;
+    border-start-start-radius: 50%;
+}
+
+.package .offer b {
     position: relative;
     right: 40px;
     font-size: 3rem;
     color: #eee;
-    text-transform:capitalize;
+    text-transform: capitalize;
 }
-.services .box-container{
+
+.services .box-container {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
 }
-.services .box-container .box{
+
+.services .box-container .box {
     flex: 1 1 35rem;
     border-radius: .5rem;
     padding: 1rem;
     text-align: center;
 }
-.services .box-container .box i{
+
+.services .box-container .box i {
     padding: 1rem;
     font-size: 5rem;
     color: var(--pink);
 }
-.services .box-container .box h3{
+
+.services .box-container .box h3 {
     font-size: 2.5rem;
     color: var(--head);
 
 }
-.services .box-container .box p{
+
+.services .box-container .box p {
     font-size: 1.5rem;
     color: #666;
     padding: 1rem 0;
 }
-.services .box-container .box:hover{
+
+.services .box-container .box:hover {
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1),
-                0 2rem 3rem rgba(0, 0, 0, .1);
+        0 2rem 3rem rgba(0, 0, 0, .1);
     border-radius: .5rem;
 }
-.gallary .box-container{
+
+.gallary .gallery-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    gap: 2rem;
 
 }
-.gallary .box-container .box{
+
+.gallary .gallery-container .box {
     overflow: hidden;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
+    box-shadow: 0 1rem 1rem rgba(0, 0, 0, .6);
     border: 1rem solid #fff;
     border-radius: .5rem;
-    flex: 1 1 35rem;
+    flex: 1 1 25rem;
     height: 25rem;
     position: relative;
+    max-width: 29rem;
 }
-.gallary .box-container .box img{
+
+.gallary .gallery-container .box img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
+
 /*.gallary .box-container .box .content{
     position:absolute;
     top: -100%;left: 0;
@@ -655,32 +803,36 @@ textarea::-webkit-scrollbar-thumb{
     color: #aaa;
     font-size: 1.5rem;
   }*/
-.contact .row{
+.contact .row {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     gap: 1.5rem;
 }
-.contact .row .map{
+
+.contact .row .map {
     flex: 1 1 20rem;
 }
-.contact .row .map iframe{
+
+.contact .row .map img {
     height: 40rem;
     width: 100%;
 }
-.contact .row .info{
+
+.contact .row .info {
     flex: 1 1 30rem;
     padding: 2rem;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, .1);
     border-radius: .5rem;
 }
-.contact .row .info h3{
+
+.contact .row .info h3 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-.contact .row .info h3{
+.contact .row .info h3 {
     width: 49%;
     margin: 1rem 0;
     padding: 1rem;
@@ -691,58 +843,68 @@ textarea::-webkit-scrollbar-thumb{
     resize: none;
     text-transform: uppercase;
 }
-.footer{
-    background: rgba( 0, 0, 0, 0.7 );
-    box-shadow: 0 8px 32px 0 rgba( 255,255,255, .7 );
-    backdrop-filter: blur( 10px );
-    -webkit-backdrop-filter: blur( 10px );
+
+.footer {
+    background: rgba(0, 0, 0, 0.7);
+    box-shadow: 0 8px 32px 0 rgba(255, 255, 255, .7);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border-radius: 10px;
-    border: 1px solid rgba( 0, 0, 0, 0.18 );
-   
+    border: 1px solid rgba(0, 0, 0, 0.18);
+
 }
-.footer .box-container{
-    width: fit-content; 
+
+.footer .box-container {
+    width: fit-content;
 }
-.footer .box-container .box{
-   padding: 0rem;
-   display: flex;
+
+.footer .box-container .box {
+    padding: 0rem;
+    display: flex;
 }
-.footer .box-container .box h3{
+
+.footer .box-container .box h3 {
     font-size: 1.5rem;
     color: var(--color);
     padding: 1rem 52rem;
-    
+
 }
 
-.footer .box-container .box a{
+.footer .box-container .box a {
     font-size: 2rem;
-    color:var(--color);
+    color: var(--color);
     padding: 1rem 10rem;
 }
-.footer .box-container .box a:hover{
+
+.footer .box-container .box a:hover {
     color: var(--pink);
     text-decoration: underline;
 }
-.footer .box-container .box .fab{
-    font-size:2.9rem;
+
+.footer .box-container .box .fab {
+    font-size: 2.9rem;
     display: inline-block;
     padding: 1rem .7rem;
     border-color: var(--footc);
     border: 2pt solid;
     border-radius: 50%;
 }
-.footer .box-container .box .fab:hover{
+
+.footer .box-container .box .fab:hover {
     text-decoration: none;
 }
-.footer .box-container .box .terms{
+
+.footer .box-container .box .terms {
     position: relative;
     left: 40rem;
     font-size: 2rem;
     color: #eee;
 }
-.slidegal{
+
+.slidegal {
     position: fixed;
-    top: -120%;left: 0;
+    top: -120%;
+    left: 0;
     z-index: 10000;
     min-height: 100vh;
     width: 100%;
@@ -751,19 +913,23 @@ textarea::-webkit-scrollbar-thumb{
     align-items: center;
     justify-content: center;
 }
-.slidegal.active{
-    top:0;
+
+.slidegal.active {
+    top: 0;
 }
-.slidegal .bx{
+
+.slidegal .bx {
     position: absolute;
-    top: 1rem;left: 3rem;
+    top: 1rem;
+    left: 3rem;
     font-size: 5rem;
     color: #fff;
     cursor: pointer;
 }
-.slidegal img{
+
+.slidegal img {
     max-height: 65rem;
     height: 70%;
     width: 70%;
-    object-fit:fill;  
+    object-fit: fill;
 }
